# infinity-loop

./: .gitignore  Cargo.toml  README.md
game/: Cargo.toml
game/examples/: test_wfc.rs
game/src/: lib.rs
game/src/core/: enummap.rs  enumset.rs  finite.rs  lattice.rs  mod.rs
game/src/generator/: fastgen.rs  levelstream.rs  mod.rs  wfc.rs
game/src/model/: cardinality.rs  cnf.rs  coordinate.rs  enummap.rs  enumset.rs  fastgen.rs  finite.rs  gameboard.rs  grid.rs  hint.rs  interval.rs  knf.rs  lattice.rs  mod.rs  monoid.rs  num.rs  parser.rs  representable.rs  solver.rs  testlevel.rs  tile.rs
game/src/solver/: hint.rs  mod.rs  propagationsolver.rs
ui/: Cargo.toml  index.html  styles.css
ui/src/: main.rs
ui/src/components/: board.rs  map.rs  map_reducer.rs  mod.rs
ui/src/components/board/: cell.rs  grid.rs  level.rs  mod.rs  row.rs
ui/src/components/editor/: cell.rs  editor.rs  editor_reducer.rs  grid.rs  mod.rs  row.rs
ui/src/components/map/: board.rs  board_reducer.rs  cell.rs  grid.rs  level.rs  map.rs  map_reducer.rs  mod.rs  row.rs
ui/src/components/map_preview/: level.rs  level_preview.rs  mod.rs  preview_reducer.rs
ui/src/components/overview/: overview.rs
ui/src/components/pages/: board.rs  board_page.rs  credit_page.rs  editor.rs  editor_page.rs  help_page.rs  level_preview.rs  mod.rs  page_container.rs  page_router.rs  start_page.rs  text_page.rs  visualizer_page.rs  wfc_board.rs
ui/src/components/reducers/: board_reducer.rs  mod.rs  preview_reducer.rs
ui/src/helper/: level_randomizer.rs  local_storage.rs  mod.rs  screen.rs
(+72 files in other folders)
