[package]
name = "game"
version = "0.1.0"
rust-version = "1.62"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
quickcheck = "1"
quickcheck_macros = "1"

wasm-logger = "0.2.0"
wasm-bindgen = "0.2.82"
log = "0.4.14"
