[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.19.3"
yew-router = "0.16.0"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.82"
log = "0.4.14"
web-sys = "0.3.56"
reqwasm = "0.4.0"
serde = { version = "1.0.133", features = ["derive"] }
rand = "0.8"


getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
game = { path = "../game"}
